[package]
name = "graft-server"
version = "0.1.0"
authors = ["axion014 <axion014@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = { version = "1.0.5", features = ["ssl"] }
openssl = { version = "0.10", features = ["v110"] }
serde_json = "1.0"
activitypub = "0.1"
tokio-postgres = { git="https://github.com/sfackler/rust-postgres.git", features = ["with-chrono-0_4"] }
futures = "0.1"
futures-locks = "0.4"
chrono = "0.4"
env_logger = "0.6"
lazy_static = "1.4"