[package]
name = "graft-server"
version = "0.1.0"
authors = ["axion014 <axion014@gmail.com>"]
edition = "2018"

[dependencies]
mongodb = "0.10.0"
bson = "0.14.0"
bytes = "0.5"
futures = "0.3.4"
futures-locks = { git="https://github.com/asomers/futures-locks.git" }
async-recursion = "0.1"
async-trait = "0.1"
actix-rt = "1.0"
actix-web = { version = "2.0", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
dotenv = "0.15"
config = "0.10"
deadpool = "0.5"
serde = "1.0"
serde_json = "1.0"
activitystreams = "0.6"
chrono = "0.4"
env_logger = "0.6"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v4"] }