[package]
name = "graft-server"
version = "0.1.0"
authors = ["axion014 <axion014@gmail.com>"]
edition = "2018"

[dependencies]
mongodb = { version = "2.0.0-beta.2", features = ["bson-chrono-0_4"] }
#bytes = "1.0.1"
#async-recursion = "0.3.2"
#async-trait = "0.1.50"
actix-web = { version = "4.0.0-beta.8", features = ["openssl"] }
bytes = "1.0"
const_format = "0.2"
oxide-auth = "0.5"
oxide-auth-actix = "0.1"
openssl = { version = "0.10.34", features = ["v110"] }
dotenv = "0.15.0"
futures = "0.3"
nodejs = { path = "../../Rust/rust-nodejs", features = ["default-panic-hook"] }
neon-serde = { git = "https://github.com/antonok-edm/neon-serde.git", branch = "refactor/update-neon-0.8" }
#config = "0.11.0"
#deadpool = "0.8.0"
serde = "1.0.126"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.4"
log = "0.4"
once_cell = "1.8.0"
mime = "0.3"
#uuid = { version = "0.8.2", features = ["v4", "serde"] }
url = { version = "2.2", features = ["serde"] }
json-ld-rs = { git = "https://github.com/axion014/json-ld-rs" }
json-trait = { git = "https://github.com/axion014/json-trait", features = ["impl_serde_json"] }
cc-traits = { git = "https://github.com/axion014/cc-traits", branch = "serde-json-map"}