[package]
name = "graft-server"
version = "0.1.0"
authors = ["axion014 <axion014@gmail.com>"]
edition = "2018"

[dependencies]
mongodb = { version = "2.1.0", features = ["bson-chrono-0_4"] }
#bytes = "1.0.1"
#async-recursion = "0.3.2"
#async-trait = "0.1.50"
actix-web = { version = "4.0.0-beta.14", features = ["openssl"] }
bytes = "1.0"
const_format = "0.2"
ctor = "0.1"
deno_core = "0.111.0"
deno_runtime = "0.37.0"
oxide-auth = "0.5"
oxide-auth-actix = "0.1"
openssl = { version = "0.10.48", features = ["v110"] }
dotenv = "0.15.0"
futures = "0.3"
#config = "0.11.0"
#deadpool = "0.8.0"
serde = "1.0.126"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.4"
log = "0.4"
once_cell = "1.8.0"
mime = "0.3"
#uuid = { version = "0.8.2", features = ["v4", "serde"] }
url = { version = "2.2", features = ["serde"] }
serde_v8 = "0.21.0"
v8 = "0.36.0"
json-ld-rs = { git = "https://github.com/axion014/json-ld-rs" }
json-trait = { git = "https://github.com/axion014/json-trait", features = ["impl_serde_json"] }
cc-traits = { git = "https://github.com/axion014/cc-traits", branch = "serde-json-map"}